--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Login | Business Marketing</title>
+    <title>Login | Blue Marketing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="login-body">
+<body class="login-page">
 
-<div class="login-box">
-    <h2>Login</h2>
+<div class="login-container">
+    <h1>BlueMarketing</h1>
+    <p>Login to your business dashboard</p>
+
     <input type="text" placeholder="Username">
     <input type="password" placeholder="Password">
-    <a href="home.html" class="btn">Login</a>
+
+    <a href="home.html" class="btn-full">Login</a>
 </div>
 
 </body>
