--- a/home.html
+++ b/home.html
@@ -2,52 +2,49 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Business Marketing</title>
+    <title>Home | Blue Marketing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header>
-    <div class="container">
-        <h1 class="logo">MyBusiness</h1>
+    <div class="nav-container">
+        <h2>BlueMarketing</h2>
         <nav>
             <a href="home.html">Home</a>
-            <a href="#">Services</a>
-            <a href="#">About</a>
+            <a href="services.html">Services</a>
+            <a href="about.html">About</a>
             <a href="index.html">Logout</a>
         </nav>
     </div>
 </header>
 
 <section class="hero">
-    <div class="hero-content">
-        <h2>Welcome to Our Business</h2>
-        <p>Helping your business grow faster</p>
-        <a href="#" class="btn">Learn More</a>
+    <div class="hero-text">
+        <h1>Grow Your Business Faster</h1>
+        <p>Professional digital marketing solutions for startups & companies</p>
+        <a href="services.html" class="btn-full">Our Services</a>
     </div>
 </section>
 
-<section class="services">
-    <h2>Our Services</h2>
-    <div class="service-box">
-        <div class="card">
-            <h3>Marketing</h3>
-            <p>Grow your brand online.</p>
-        </div>
-        <div class="card">
-            <h3>Branding</h3>
-            <p>Create strong business identity.</p>
-        </div>
-        <div class="card">
-            <h3>Advertising</h3>
-            <p>Reach more customers.</p>
-        </div>
+<section class="features">
+    <div class="feature-card">
+        <h3>🚀 Fast Growth</h3>
+        <p>We help your business grow with proven strategies.</p>
+    </div>
+    <div class="feature-card">
+        <h3>💼 Professional Team</h3>
+        <p>Handled by experienced digital marketers.</p>
+    </div>
+    <div class="feature-card">
+        <h3>📊 Smart Analytics</h3>
+        <p>Track performance with real data.</p>
     </div>
 </section>
 
 <footer>
-    <p>© 2025 MyBusiness</p>
+    <p>© 2025 BlueMarketing. All Rights Reserved.</p>
 </footer>
 
 </body>
