--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Blue Marketing</title>
+    <title>Home | BlueMarketing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,27 +20,90 @@
     </div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
     <div class="hero-text">
-        <h1>Grow Your Business Faster</h1>
-        <p>Professional digital marketing solutions for startups & companies</p>
-        <a href="services.html" class="btn-full">Our Services</a>
+        <h1>Bangun Bisnis Lebih Profesional & Dipercaya</h1>
+        <p>
+            Kami membantu UMKM dan startup meningkatkan penjualan
+            melalui strategi digital marketing yang tepat sasaran.
+        </p>
+        <a href="#contact" class="btn-full">Konsultasi Gratis</a>
     </div>
 </section>
 
-<section class="features">
-    <div class="feature-card">
-        <h3>🚀 Fast Growth</h3>
-        <p>We help your business grow with proven strategies.</p>
+<!-- PROBLEM -->
+<section class="problem">
+    <h2>Apakah Bisnis Kamu Mengalami Ini?</h2>
+    <ul>
+        <li>❌ Sudah promosi tapi penjualan tidak naik</li>
+        <li>❌ Media sosial sepi dan tidak berkembang</li>
+        <li>❌ Website ada tapi tidak menghasilkan</li>
+    </ul>
+</section>
+
+<!-- SOLUTION -->
+<section class="solution">
+    <h2>Solusi dari BlueMarketing</h2>
+    <p>
+        Kami tidak hanya membuat promosi terlihat bagus,
+        tapi fokus pada strategi yang menghasilkan penjualan nyata.
+    </p>
+</section>
+
+<!-- SERVICES -->
+<section class="services" id="services">
+    <h2>Layanan Kami</h2>
+    <div class="service-grid">
+        <div class="card">
+            <h3>Digital Marketing Strategy</h3>
+            <p>
+                Strategi pemasaran berbasis data untuk meningkatkan
+                penjualan secara konsisten.
+            </p>
+        </div>
+        <div class="card">
+            <h3>Social Media Management</h3>
+            <p>
+                Kelola konten & iklan agar brand kamu lebih dikenal
+                dan dipercaya.
+            </p>
+        </div>
+        <div class="card">
+            <h3>Branding & Design</h3>
+            <p>
+                Bangun identitas visual yang profesional
+                dan mudah diingat.
+            </p>
+        </div>
     </div>
-    <div class="feature-card">
-        <h3>💼 Professional Team</h3>
-        <p>Handled by experienced digital marketers.</p>
+</section>
+
+<!-- WHY US -->
+<section class="why-us">
+    <h2>Kenapa Memilih Kami?</h2>
+    <div class="features">
+        <div class="feature-card">✅ Fokus pada hasil penjualan</div>
+        <div class="feature-card">✅ Cocok untuk UMKM & startup</div>
+        <div class="feature-card">✅ Tim profesional & berpengalaman</div>
     </div>
-    <div class="feature-card">
-        <h3>📊 Smart Analytics</h3>
-        <p>Track performance with real data.</p>
-    </div>
+</section>
+
+<!-- TESTIMONI -->
+<section class="testimoni">
+    <h2>Apa Kata Klien Kami</h2>
+    <blockquote>
+        “Setelah bekerja sama dengan BlueMarketing,
+        penjualan kami naik hampir 2x dalam 3 bulan.”
+        <br><strong>– Andi, Owner UMKM</strong>
+    </blockquote>
+</section>
+
+<!-- CTA -->
+<section class="cta" id="contact">
+    <h2>Siap Mengembangkan Bisnis Kamu?</h2>
+    <p>Hubungi kami sekarang dan dapatkan konsultasi gratis</p>
+    <a href="#" class="btn-full">Hubungi Kami</a>
 </section>
 
 <footer>
