--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Home | BlueMarketing</title>
+    <title>BlueMarketing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,102 +13,66 @@
         <h2>BlueMarketing</h2>
         <nav>
             <a href="home.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="about.html">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
             <a href="index.html">Logout</a>
         </nav>
     </div>
 </header>
 
 <!-- HERO -->
-<section class="hero">
+<section class="hero fade-in">
     <div class="hero-text">
         <h1>Bangun Bisnis Lebih Profesional & Dipercaya</h1>
         <p>
-            Kami membantu UMKM dan startup meningkatkan penjualan
-            melalui strategi digital marketing yang tepat sasaran.
+            Solusi digital marketing untuk UMKM & startup
+            agar penjualan meningkat secara nyata.
         </p>
         <a href="#contact" class="btn-full">Konsultasi Gratis</a>
     </div>
 </section>
 
 <!-- PROBLEM -->
-<section class="problem">
-    <h2>Apakah Bisnis Kamu Mengalami Ini?</h2>
+<section class="problem fade-in">
+    <h2>Masalah yang Sering Terjadi</h2>
     <ul>
-        <li>❌ Sudah promosi tapi penjualan tidak naik</li>
-        <li>❌ Media sosial sepi dan tidak berkembang</li>
-        <li>❌ Website ada tapi tidak menghasilkan</li>
+        <li>❌ Promosi jalan tapi hasil tidak terasa</li>
+        <li>❌ Media sosial sepi</li>
+        <li>❌ Website tidak menghasilkan</li>
     </ul>
 </section>
 
-<!-- SOLUTION -->
-<section class="solution">
-    <h2>Solusi dari BlueMarketing</h2>
-    <p>
-        Kami tidak hanya membuat promosi terlihat bagus,
-        tapi fokus pada strategi yang menghasilkan penjualan nyata.
-    </p>
-</section>
-
 <!-- SERVICES -->
-<section class="services" id="services">
+<section class="services fade-in" id="services">
     <h2>Layanan Kami</h2>
     <div class="service-grid">
-        <div class="card">
-            <h3>Digital Marketing Strategy</h3>
-            <p>
-                Strategi pemasaran berbasis data untuk meningkatkan
-                penjualan secara konsisten.
-            </p>
-        </div>
-        <div class="card">
-            <h3>Social Media Management</h3>
-            <p>
-                Kelola konten & iklan agar brand kamu lebih dikenal
-                dan dipercaya.
-            </p>
-        </div>
-        <div class="card">
-            <h3>Branding & Design</h3>
-            <p>
-                Bangun identitas visual yang profesional
-                dan mudah diingat.
-            </p>
-        </div>
+        <div class="card">📈 Digital Marketing Strategy</div>
+        <div class="card">📱 Social Media Management</div>
+        <div class="card">🎨 Branding & Design</div>
     </div>
 </section>
 
 <!-- WHY US -->
-<section class="why-us">
+<section class="why-us fade-in">
     <h2>Kenapa Memilih Kami?</h2>
     <div class="features">
-        <div class="feature-card">✅ Fokus pada hasil penjualan</div>
-        <div class="feature-card">✅ Cocok untuk UMKM & startup</div>
-        <div class="feature-card">✅ Tim profesional & berpengalaman</div>
+        <div class="feature-card">✅ Fokus ke hasil</div>
+        <div class="feature-card">✅ Harga ramah UMKM</div>
+        <div class="feature-card">✅ Tim berpengalaman</div>
     </div>
 </section>
 
 <!-- TESTIMONI -->
-<section class="testimoni">
-    <h2>Apa Kata Klien Kami</h2>
+<section class="testimoni fade-in">
+    <h2>Testimoni Klien</h2>
     <blockquote>
-        “Setelah bekerja sama dengan BlueMarketing,
-        penjualan kami naik hampir 2x dalam 3 bulan.”
+        “Setelah pakai jasa ini, penjualan naik drastis.”
         <br><strong>– Andi, Owner UMKM</strong>
     </blockquote>
 </section>
 
 <!-- CTA -->
-<section class="cta" id="contact">
-    <h2>Siap Mengembangkan Bisnis Kamu?</h2>
+<section class="cta fade-in" id="contact">
+    <h2>Siap Naik Level?</h2>
     <p>Hubungi kami sekarang dan dapatkan konsultasi gratis</p>
-    <a href="#" class="btn-full">Hubungi Kami</a>
-</section>
-
-<footer>
-    <p>© 2025 BlueMarketing. All Rights Reserved.</p>
-</footer>
-
-</body>
-</html>
+    <a href="https://wa
