--- a/home.html
+++ b/home.html
@@ -17,8 +17,11 @@
             <a href="#tips">Tips Praktis</a>
             <a href="index.html">Logout</a>
         </nav>
+        <!-- Tombol Dark/Light Mode -->
+        <button id="theme-toggle">🌙</button>
     </div>
 </header>
+
 
 <!-- HERO -->
 <section class="hero">
