--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <section class="login-section">
     <div class="login-container">
         <h2>Login Akun</h2>
+        <!-- Tombol Dark/Light Mode -->
+        <button id="theme-toggle">🌙</button>
+
         <form action="home.html" method="get">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
@@ -18,6 +21,28 @@
         </form>
     </div>
 </section>
+
+<script>
+    const toggleBtn = document.getElementById('theme-toggle');
+    const body = document.body;
+
+    if(localStorage.getItem('theme') === 'dark') {
+        body.classList.add('dark-mode');
+        toggleBtn.textContent = '☀️';
+    }
+
+    toggleBtn.addEventListener('click', () => {
+        body.classList.toggle('dark-mode');
+
+        if(body.classList.contains('dark-mode')) {
+            toggleBtn.textContent = '☀️';
+            localStorage.setItem('theme', 'dark');
+        } else {
+            toggleBtn.textContent = '🌙';
+            localStorage.setItem('theme', 'light');
+        }
+    });
+</script>
 
 </body>
 </html>
