--- a/home.html
+++ b/home.html
@@ -31,19 +31,19 @@
     </div>
 </section>
 
-<!-- STRATEGI DIGITAL MARKETING -->
+<!-- STRATEGI -->
 <section id="strategi">
     <h2>Strategi Utama Digital Marketing</h2>
     <ul>
         <li>📈 <strong>SEO</strong> - Optimasi website agar muncul di Google dan menarik traffic organik.</li>
-        <li>📱 <strong>Social Media Marketing</strong> - Membuat konten menarik & rutin di Instagram, TikTok, Facebook.</li>
-        <li>💌 <strong>Email Marketing</strong> - Mengirim email promosi yang relevan.</li>
-        <li>📊 <strong>Content Marketing</strong> - Membuat artikel, video, infografik edukatif.</li>
-        <li>💰 <strong>Paid Ads</strong> - Iklan berbayar di Google Ads atau media sosial untuk mempercepat konversi.</li>
+        <li>📱 <strong>Social Media Marketing</strong> - Konten menarik di Instagram, TikTok, Facebook.</li>
+        <li>💌 <strong>Email Marketing</strong> - Kirim email promosi yang relevan.</li>
+        <li>📊 <strong>Content Marketing</strong> - Artikel, video, infografik edukatif.</li>
+        <li>💰 <strong>Paid Ads</strong> - Iklan berbayar di Google Ads atau media sosial.</li>
     </ul>
 </section>
 
-<!-- TIPS PRAKTIS -->
+<!-- TIPS -->
 <section id="tips">
     <h2>Tips Praktis Meningkatkan Digital Marketing</h2>
     <ol>
@@ -70,7 +70,6 @@
 
     toggleBtn.addEventListener('click', () => {
         body.classList.toggle('dark-mode');
-
         if(body.classList.contains('dark-mode')) {
             toggleBtn.textContent = '☀️';
             localStorage.setItem('theme', 'dark');
