--- a/index.html
+++ b/index.html
@@ -8,61 +8,99 @@
 </head>
 <body>
 
-  <!-- LOGIN PAGE -->
-  <div id="loginPage" class="center">
-    <div class="login-box">
-      <img src="hero.jpg" alt="Ilustrasi Digital Marketing">
-      <h2>Login</h2>
-      <input type="text" id="username" placeholder="Username">
-      <input type="password" id="password" placeholder="Password">
-      <button onclick="login()">Masuk</button>
-      <p id="loginMsg"></p>
-    </div>
+<!-- LOGIN PAGE -->
+<div id="loginPage" class="center">
+  <div class="login-box">
+    <img src="hero.jpg" alt="Ilustrasi Digital Marketing" />
+    <h2>Login</h2>
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Masuk</button>
+    <p id="loginMsg"></p>
   </div>
+</div>
 
-  <!-- MAIN PAGE -->
-  <div id="mainPage" class="hidden">
-    <header>
-      <h1>Digital Marketing</h1>
-      <div>
-        <button onclick="toggleDark()">🌙 Dark Mode</button>
-        <button onclick="logout()">Logout</button>
-      </div>
-    </header>
+<!-- MAIN PAGE -->
+<div id="mainPage" class="hidden">
+  <header>
+    <h1>Digital Marketing</h1>
+    <div class="actions">
+      <button onclick="toggleDark()">🌙 Dark Mode</button>
+      <button onclick="logout()">Logout</button>
+    </div>
+  </header>
 
-    <main class="container">
+  <main class="container">
       <h2>Apa itu Digital Marketing?</h2>
       <p>
-        Digital marketing adalah strategi pemasaran menggunakan media digital
-        seperti website, media sosial, SEO, dan iklan online.
+        Digital marketing adalah seluruh aktivitas pemasaran yang memanfaatkan media digital dan internet untuk menjangkau, menarik, serta mempertahankan konsumen. Berbeda dengan pemasaran konvensional, digital marketing memungkinkan pelaku usaha untuk berinteraksi langsung dengan target pasar secara cepat, luas, dan terukur. Melalui digital marketing, perusahaan dapat mempromosikan produk atau jasa menggunakan website, media sosial, mesin pencari, email, serta berbagai platform digital lainnya.
+      </p>
+      <p>
+        Tujuan utama digital marketing adalah meningkatkan kesadaran merek (brand awareness), menarik calon pelanggan (leads), meningkatkan penjualan, serta membangun hubungan jangka panjang dengan konsumen. Karena berbasis data, digital marketing juga memungkinkan evaluasi dan perbaikan strategi secara berkelanjutan.
       </p>
 
-      <h2>Bidang Digital Marketing</h2>
+      <h2>Mengapa Digital Marketing Penting?</h2>
+      <p>
+        Digital marketing menjadi sangat penting karena perilaku masyarakat yang semakin bergantung pada internet dan perangkat digital. Hampir semua orang menggunakan smartphone untuk mencari informasi, berbelanja, dan berkomunikasi. Dengan digital marketing, pelaku usaha dapat menjangkau konsumen kapan saja dan di mana saja tanpa batasan wilayah.
+      </p>
+      <p>
+        Selain itu, biaya digital marketing relatif lebih efisien dibandingkan pemasaran tradisional. Hasil pemasaran juga dapat diukur secara detail, seperti jumlah pengunjung, tingkat interaksi, hingga konversi penjualan, sehingga strategi dapat disesuaikan dengan kebutuhan pasar.
+      </p>
+
+      <h2>Bidang-Bidang dalam Digital Marketing</h2>
       <div class="grid">
         <div class="card">
-          <h3>SEO</h3>
-          <p>Optimasi website agar muncul di mesin pencari.</p>
+          <h3>Search Engine Optimization (SEO)</h3>
+          <p>
+            SEO adalah teknik optimasi website agar muncul di peringkat teratas hasil pencarian mesin pencari seperti Google. SEO bertujuan meningkatkan trafik organik dengan mengoptimalkan konten, struktur website, kecepatan halaman, serta penggunaan kata kunci yang relevan.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Search Engine Marketing (SEM)</h3>
+          <p>
+            SEM adalah strategi pemasaran menggunakan iklan berbayar di mesin pencari, seperti Google Ads. Dengan SEM, website dapat langsung muncul di hasil pencarian berdasarkan kata kunci tertentu sehingga efektif untuk meningkatkan visibilitas dan penjualan dalam waktu singkat.
+          </p>
         </div>
         <div class="card">
           <h3>Social Media Marketing</h3>
-          <p>Pemasaran melalui Instagram, TikTok, dan Facebook.</p>
+          <p>
+            Social media marketing adalah pemasaran melalui platform media sosial seperti Instagram, Facebook, TikTok, dan Twitter. Strategi ini mencakup pembuatan konten, interaksi dengan audiens, serta penggunaan iklan berbayar untuk membangun brand dan meningkatkan loyalitas pelanggan.
+          </p>
         </div>
         <div class="card">
           <h3>Content Marketing</h3>
-          <p>Membuat konten menarik untuk brand.</p>
+          <p>
+            Content marketing berfokus pada pembuatan dan distribusi konten yang bernilai, relevan, dan konsisten, seperti artikel, video, infografis, dan podcast. Tujuannya adalah menarik perhatian audiens dan membangun kepercayaan terhadap merek.
+          </p>
         </div>
         <div class="card">
           <h3>Email Marketing</h3>
-          <p>Promosi produk melalui email.</p>
+          <p>
+            Email marketing adalah strategi pemasaran dengan mengirimkan pesan promosi, informasi, atau penawaran khusus melalui email kepada pelanggan. Strategi ini efektif untuk mempertahankan pelanggan dan meningkatkan penjualan berulang.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Affiliate Marketing</h3>
+          <p>
+            Affiliate marketing adalah kerja sama antara pemilik produk dan pihak lain (afiliasi) untuk memasarkan produk. Afiliasi akan mendapatkan komisi dari setiap penjualan yang dihasilkan melalui tautan atau kode referensi tertentu.
+          </p>
         </div>
       </div>
+
+      <h2>Manfaat Digital Marketing</h2>
+      <p>
+        Digital marketing memberikan banyak manfaat, antara lain meningkatkan jangkauan pasar, memperkuat citra merek, meningkatkan penjualan, serta membangun hubungan yang lebih dekat dengan konsumen. Selain itu, digital marketing memungkinkan pelaku usaha untuk bersaing secara adil, baik usaha kecil maupun besar.
+      </p>
+
+      <h2>Kesimpulan</h2>
+      <p>
+        Digital marketing merupakan strategi pemasaran yang sangat relevan di era digital. Dengan memanfaatkan berbagai platform dan teknik digital marketing, pelaku usaha dapat menjangkau pasar yang lebih luas, meningkatkan efektivitas promosi, serta mencapai tujuan bisnis secara lebih optimal.
+      </p>
     </main>
 
-    <footer>
-      © 2025 Digital Marketing Website
-    </footer>
-  </div>
+  <footer>© 2025 Digital Marketing</footer>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
